Change mock structured and rename index to app

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "platzi-video",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
     "start": "NODE_ENV=production node index"
