--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
