--- a/package.json
+++ b/package.json
@@ -5,19 +5,29 @@
   "main": "app.js",
   "scripts": {
     "dev": "DEBUG=app:* nodemon main",
-    "start": "NODE_ENV=production node main"
+    "start": "NODE_ENV=production node main",
+    "tests": "mocha test/unit --exit"
   },
   "keywords": [],
   "author": "Axel Espinosa @E_Axel45 axelespinosadev.com",
   "license": "MIT",
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "mocha": "^8.1.1",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "sinon": "^9.0.2"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
