--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "DEBUG=app:* nodemon main",
+    "dev": "DEBUG=app:* nodemon server.js",
     "start": "NODE_ENV=production node main",
     "tests": "mocha test/unit --exit"
   },
@@ -19,15 +19,13 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "mocha": "^8.1.1",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
-    "sinon": "^9.0.2"
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.2",
+    "standard": "^16.0.3"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
@@ -43,6 +41,6 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": "npx standard"
   }
 }
