--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "DEBUG=app:* nodemon server.js",
+    "lint": "npx standard --fix",
     "start": "NODE_ENV=production node main",
     "tests": "mocha test/unit --exit"
   },
@@ -30,6 +31,7 @@
   "dependencies": {
     "@hapi/boom": "^9.1.0",
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -41,6 +43,6 @@
     }
   },
   "lint-staged": {
-    "*.js": "npx standard"
+    "*.js": "npx standard --fix"
   }
 }
