refactor: environment variables added

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,14 @@ CORS=*
 MONGO_USER=
 MONGO_DBNAME=
 MONGO_PASSWORD=
+
+// USERS
+DEFAULT_ADMIN_PASSWORD=
+DEFAULT_USER_PASSWORD=
+
+// AUTH
+AUTH_JWT_SECRET=
+
+// API KEYS
+PUBLIC_API_KEY_TOKEN=
+ADMIN_API_KEY_TOKEN=
